--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
-</html>
+<%- include('partials/header') %>
+
+<h2>Welcome to Resource Vault</h2>
+<p>Resource Vault is a collection of links and resources for a dev student.
+</p>
+
+<h3>Explore Top 5 Categories</h3>
+<!-- add 5 cards with the top five -->
+
+<%- include('partials/footer') %>
