--- a/views/links/new.ejs
+++ b/views/links/new.ejs
@@ -1,4 +1,30 @@
 <%- include('../partials/header') %>
 <h2> Add New Resource</h2>
 
+<form class="add-forms" action="/links/<" method="POST">
+
+    <label class="labels">Name:
+        <input type="text" name="name">
+    </label><br>
+
+    <label class="labels">Link:
+      <input type="text" name="link">
+    </label><br>
+
+    <label class="labels">Description:
+        <input type="text" name="description">
+      </label><br>
+
+    <label class="labels">Pick a Category:
+        <!-- <input type="text" name="category"> -->
+        <select name="category">
+            <% categories.forEach(function(category){ %>
+                <option value="<%=category%>"><%=category%></option>
+            <% }) %>
+        </select>
+    </label><br>
+    
+    <button type="submit" value="Add Link">Add</button>
+</form>
+
 <%- include('../partials/footer') %>
