--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,16 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resource Vault</title>
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body>
     <header>
         <h1>RESOURCE <br> VAULT</h1>
-        <nav>
+        <nav class="navbar-transition cool-navbar z-depth-0">
             <a href="/"> home </a>
             <a href="/categories"> explore</a>
+            <% if(user?.isAdmin == true){%>
+                <a href="/categories/new">add new category</a>
+            <%}%>
             <!-- <a href="/links/new">Add New Resource</a> -->
-            <a href="/users/index">profile</a>
+            <!-- Login UI -->
+            <% if (user) { %>
+                <a href="/users/<%=user.id%>/favourites">favourites</a>
+                <a href="/users/index">profile</a>
+                <a href="/logout">log out</a>
+            <% } else { %>
+                <a href="/auth/google">login In</a>
+            <% } %>
+
         </nav>
     </header>       
     <main>
