--- a/views/links/edit.ejs
+++ b/views/links/edit.ejs
@@ -1,18 +1,18 @@
 <%- include('../partials/header') %>
-<h2> Add New Resource</h2>
+<h2> Add New Favourite</h2>
 
-<form class="add-forms" action="/links" method="POST">
+<form class="add-forms" action="/links/<%=link.id%>?_method=PUT" method="POST">
 
     <label class="labels">Name:
-        <input type="text" name="name">
+        <input type="text" name="name" value="<%=link.name%>">
     </label><br>
 
     <label class="labels">Link:
-      <input type="text" name="link">
+      <input type="text" name="link" value="<%=link.link%>">
     </label><br>
 
     <label class="labels">Description:
-        <input type="text" name="description">
+        <input type="text" name="description" value="<%=link.description%>">
       </label><br>
 
     <label class="labels">Pick a Category:
@@ -23,8 +23,9 @@
             <% }) %>
         </select>
     </label><br>
+
     <br>
-    <button type="submit" value="Add Link">add</button>
+    <button type="submit" value="Add Link">Update</button>
 </form>
 
 <%- include('../partials/footer') %>
