--- a/views/categories/index.ejs
+++ b/views/categories/index.ejs
@@ -2,7 +2,7 @@
 <h2> Explore Categories</h2>
 
 <!-- A bar here for add new link -->
-<nav class="navbar navbar-light bg-light">
+<nav class="navbar ">
     <a></a>
     <%if(locals.user){%><a class='categoriespage-links' href="/links/new">Add New Resource</a><%}%>
     <!-- <form class="form-inline">
