--- a/views/favourites/new.ejs
+++ b/views/favourites/new.ejs
@@ -12,7 +12,7 @@
     </label><br>
 
     <label class="labels">Description:
-        <input type="text" name="description">
+        <input type="text" name="description" class="input-description">
       </label><br>
 
     <label class="labels">Pick a Category:
@@ -29,7 +29,7 @@
     </label><br>
 
     <label class="notes">Notes:
-        <input type="text" name="notes">
+        <input type="text" name="notes" class="input-description">
     </label><br>
 
 
