--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,19 +5,20 @@
         <h2>Welcome to Resource Vault</h2>
         <p>Resource Vault is a collection of links and resources for a dev student.
         </p>
+        <h6>Click Explore to checkout collection or Log In to view your favourites</h6>
     </div>
     
     
     
-    <div class="row">
+    <!-- <div class="row">
         <h3>Explore Top 3 Categories</h3>
-        <!-- add 5 cards with the top five -->
+        add 5 cards with the top five
         <div class="row row-cols-5 top-three">
             <div class="col">
                 <div class="card" style="width: 18rem;">
                     <div class="card-body">
                         <h5 class="card-title">Card Title</h5>
-                        <!-- <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6> -->
+                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         <a href="#" class="card-link">Card link</a>
                         <a href="#" class="card-link">Another link</a>
@@ -48,6 +49,6 @@
             </div>
         </div>
       </div>
-</div>
+</div> -->
 
 <%- include('partials/footer') %>
