--- a/views/links/new.ejs
+++ b/views/links/new.ejs
@@ -12,7 +12,7 @@
     </label><br>
 
     <label class="labels">Description:
-        <input type="text" name="description">
+        <input type="text" name="description" class="input-description">
       </label><br>
 
     <label class="labels">Pick a Category:
