add styling to link cards

--- a/views/categories/index.ejs
+++ b/views/categories/index.ejs
@@ -73,7 +73,7 @@
                     <div class="col">
                         <div class="card" style="width: 18rem;">
                             <div class="card-body">
-                                <h5 class="card-title"><%=link.name%></h5>
+                                <h5 class="card-header card-title"><%=link.name%></h5>
                                 <h6 class="card-subtitle mb-2 text-muted"><%=link.category%></h6>
                                 <p class="card-text"><%=link.description%></p>
                                 <a href="<%=link.link%>" class="card-link" target="_blank">direct link</a><br>
