--- a/views/links/new.ejs
+++ b/views/links/new.ejs
@@ -12,8 +12,8 @@
     </label><br>
 
     <label class="labels">Description:
-        <input type="text" name="description" class="input-description">
-      </label><br>
+        <textarea type="text" name="description" class="input-description"></textarea>
+    </label><br>
 
     <label class="labels">Pick a Category:
         <!-- <input type="text" name="category"> -->
