--- a/views/links/edit.ejs
+++ b/views/links/edit.ejs
@@ -12,7 +12,7 @@
     </label><br>
 
     <label class="labels">Description:
-        <input type="text" name="description" class="input-description" value="<%=link.description%>">
+        <textarea type="text" name="description" class="input-description" value="<%=link.description%>"></textarea>
       </label><br>
 
     <label class="labels">Pick a Category:
